--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <a href="#">Reviews</a>
         </nav>
           <div class="social-media">
-            <a href="#"><i class='bx bxl-instagram'></i></a> 
+            <a href="https://www.instagram.com/its_amrendra.singh/"><i class='bx bxl-instagram'></i></a> 
             <a href="#"><i class='bx bxl-reddit'></i></a> 
-            <a href="#"><i class='bx bxl-github'></i></a> 
+            <a href="https://github.com/i-am-amrendra/talkspace-landing-page"><i class='bx bxl-github'></i></a> 
           </div>
     </header>
     <main>
